[project]
name = "justmyresource-lucide"
version = "0.2.0.dev0"
description = "JustMyResource pack for Lucide icons - provides access to 1500+ SVG icons from the Lucide icon library"
authors = [
    {name = "Kaj Siebert", email = "kaj@k-si.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "justmyresource (>=0.1.0,<0.2.0)",
    "lucide (>=1.1.3,<2.0.0)"
]
keywords = ["icons", "lucide", "svg", "resources", "justmyresource"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.entry-points."justmyresource.packs"]
lucide = "justmyresource_lucide:get_resource_provider"

[tool.poetry]
packages = [{include = "justmyresource_lucide", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
